--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,5 +1,18 @@
 <div class="row">
     <div class="col">
-        <input type="text" (keyup.enter)="buscar(termino.value)" #termino class="form-control" placeholder="Buscar">
+        <input autoFocus type="text" (keyup.enter)="buscar(termino.value)" #termino class="form-control" placeholder="Buscar artista...">
+    </div>
+</div>
+<hr>
+<div class="card-columns">
+    <div class="card text-center" *ngFor="let artista of artistas">
+        <img *ngIf="artista.images[1]" [src]="artista.images[1].url" class="card-img-top" [alt]="artista.name">
+        <div class="card-body">
+        <h5 class="card-title">{{ artista.name }} <span class="badge badge-primary"> {{ artista.followers.total }} </span> </h5>
+        <p class="card-text"><i><span class="badge badge-secondary" *ngFor="let genero of artista.genres">{{ genero }}</span></i></p>
+        <p class="card-text">
+            <a class="btn btn-success" target="_blank" [href]="artista.external_urls.spotify">Conocelos</a>
+        </p>
+        </div>
     </div>
 </div>
