--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,9 +4,10 @@
     </div>
 </div>
 <hr>
+<app-loading class="text-center" *ngIf="loading"></app-loading>
 <div class="card-columns">
-    <div class="card text-center" *ngFor="let artista of artistas">
-        <img *ngIf="artista.images[1]" [src]="artista.images[1].url" class="card-img-top" [alt]="artista.name">
+    <div class="card text-center animated fadeIn fast" *ngFor="let artista of artistas">
+        <img [src]="artista.images | noimage" class="card-img-top" [alt]="artista.name">
         <div class="card-body">
         <h5 class="card-title">{{ artista.name }} <span class="badge badge-primary"> {{ artista.followers.total }} </span> </h5>
         <p class="card-text"><i><span class="badge badge-secondary" *ngFor="let genero of artista.genres">{{ genero }}</span></i></p>
