artists and song models

--- a/src/app/components/artista/artista.component.html
+++ b/src/app/components/artista/artista.component.html
@@ -1,1 +1,14 @@
-<p>artista works!</p>
+<app-loading *ngIf="!loaded"></app-loading>
+
+<div class="row" *ngIf="loaded">
+    <div class="col-2">
+        <img [src]="artista.images[0].url" [alt]="artista.name" class="img-thumbnail img-circle">
+    </div>
+    <div class="col">
+        <h3>{{ artista.name }}</h3>
+        <p><a [href]="artista.external_urls.spotify" target="_blank">Ir a la página del artista</a></p>
+    </div>
+    <div class="col-4 text-right">
+        <button routerLink="/search" class="btn btn-outline-danger">Volver</button>
+    </div>
+</div>
