--- a/src/app/components/tarjetas/tarjetas.component.html
+++ b/src/app/components/tarjetas/tarjetas.component.html
@@ -1,5 +1,5 @@
 <div class="card-columns">
-    <div class="card text-center animated fadeIn fast" *ngFor="let cancion of items">
+    <div class="card text-center animated fadeIn fast puntero" *ngFor="let cancion of items">
         <img [src]="cancion.images | noimage" class="card-img-top" alt="">
         <div class="card-body">
         <h5 class="card-title">{{ cancion.name }}</h5>
